# C-Planetary-Orbits

./: CMakeLists.txt
include/: orbital_body.h  screen.h
src/: draw.c  main.c  orbital_body.c  screen.c
